
===========================================================================
Release 2.0.1 - Not Yet Released
===========================================================================

Mantle Universal Service Library 2.0.1 is a patch level feature and bug fix
release. This release is based on Moqui Framework 2.1.1, mantle-udm 2.0.1.

New Features

- The create#PostalAddress, #TelecomNumber, #EmailAddress, and
  #PartyContactOther services no longer have a default contactMechPurposeId
  and only create PartyContactMech so that they can be created without
  PartyContactMech, FacilityContactMech, etc associations
- Similarly store#PartyContactInfo no longer default to primary purpose for
  TelecomNumber, EmailAddress, and PostalAddress which allows for things
  like creating a PostalAddress with phone and email that are associated
  with it but not with the Party or Facility


===========================================================================
Release 2.0.0 - 22 Oct 2017
===========================================================================

Mantle Universal Service Library 2.0.0 is a major feature and bug fix
release. This release is based on Moqui Framework 2.1.0, mantle-udm 2.0.0.

There are many new services (641 total in this release, 474 in the last
release) in this release plus significant improvements to existing services
to support additional business scenarios and so all services work together
in a more consistent and clean way.

Most of the new and improved services are for core procure to pay, order to
cash, and accounting business processes. There are part of the primary
effort in this release series to build out the PopCommerce ERP application
and add more ecommerce related functionality. POPC ERP (version 2.0.0) is
now a comprehensive, OOTB usable application for small and medium sized
retailers, wholesalers, and distributors.

Non-Backward Compatible Changes

- Moved get#OrderDisplayInfo from OrderServices.xml to OrderInfoServices.xml