@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+This software is in the public domain under CC0 1.0 Universal plus a 
+Grant of Patent License.
+
+To the extent possible under law, the author(s) have dedicated all
+copyright and related and neighboring rights to this software to the
+public domain worldwide. This software is distributed without any
+warranty.
+
+You should have received a copy of the CC0 Public Domain Dedication
+along with this software (see the LICENSE.md file). If not, see
+<http://creativecommons.org/publicdomain/zero/1.0/>.
+-->
+<entity-facade-xml type="install">
+    <!-- Order Approve warning and other messages - used in OrderInfoServices.check#OrderPreApprove -->
+
+    <moqui.basic.LocalizedMessage locale="default" original="OrderApproveCurrencyDifferent"
+            localized="Payment currency ${payment.amountUomId} is different from order currency ${orderHeader.currencyUomId}"/>
+    <moqui.basic.LocalizedMessage locale="default" original="OrderApprovePaymentPromisedLow"
+            localized="Total promised or later payment total ${ec.l10n.formatCurrency(totalPromised, orderHeader.currencyUomId)} is less than order total ${ec.l10n.formatCurrency(orderHeader.grandTotal, orderHeader.currencyUomId)}"/>
+    <moqui.basic.LocalizedMessage locale="default" original="OrderApprovePaymentAuthorizedLow"
+            localized="Total authorized or later payment total ${ec.l10n.formatCurrency(totalAuthorized, orderHeader.currencyUomId)} is less than order total ${ec.l10n.formatCurrency(orderHeader.grandTotal, orderHeader.currencyUomId)}"/>
+    <!-- TODO more to do between these in service -->
+    <moqui.basic.LocalizedMessage locale="default" original="OrderApproveNearOrder"
+            localized="Found similar order ${nearOrder.orderId}:${nearOrder.orderPartSeqId} placed ${ec.l10n.format(nearOrder.placedDate, null)} (${ec.l10n.format(diffHours, '0.0')}h ${isFuture ? 'after' : 'before'}) with ${ec.l10n.format(nearItem.quantity, '0.##')} of product ${nearItem.productId}"/>
+
+</entity-facade-xml>
