@@ -425,12 +425,12 @@ along with this software (see the LICENSE.md file). If not, see
                     <set field="totalPromised" from="totalPromised + (payment.amount ?: 0.0)"/>
                 </else-if></if>
                 <if condition="payment.amountUomId != orderHeader.currencyUomId">
-                    <script>approveWarnings.add(ec.resource.expand('Payment currency ${payment.amountUomId} is different from order currency ${orderHeader.currencyUomId}', null))</script></if>
+                    <script>approveWarnings.add(ec.resource.expand('OrderApproveCurrencyDifferent', null))</script></if>
             </iterate>
             <if condition="totalPromised &lt; orderHeader.grandTotal">
-                <script>approveWarnings.add(ec.resource.expand('Total promised or later payment total ${ec.l10n.formatCurrency(totalPromised, orderHeader.currencyUomId)} is less than order total ${ec.l10n.formatCurrency(orderHeader.grandTotal, orderHeader.currencyUomId)}', null))</script></if>
+                <script>approveWarnings.add(ec.resource.expand('OrderApprovePaymentPromisedLow', null))</script></if>
             <if condition="totalAuthorized &lt; orderHeader.grandTotal">
-                <script>approveWarnings.add(ec.resource.expand('Total authorized or later payment total ${ec.l10n.formatCurrency(totalAuthorized, orderHeader.currencyUomId)} is less than order total ${ec.l10n.formatCurrency(orderHeader.grandTotal, orderHeader.currencyUomId)}', null))</script></if>
+                <script>approveWarnings.add(ec.resource.expand('OrderApprovePaymentAuthorizedLow', null))</script></if>
 
             <!-- don't go beyond here if there is no customer or vendor -->
             <set field="noCustomerOrVendor" from="false"/>
@@ -609,8 +609,8 @@ along with this software (see the LICENSE.md file). If not, see
                         <econdition field-name="productId" operator="in" from="productIdSet"/>
                         <select-field field-name="productId,quantity"/>
                     </entity-find>
-                    <iterate list="nearItemList" entry="nearItem"><script>approveWarnings.add(ec.resource.expand(
-                        'Found similar order ${nearOrder.orderId}:${nearOrder.orderPartSeqId} placed ${ec.l10n.format(nearOrder.placedDate, null)} (${ec.l10n.format(diffHours, "0.0")}h ${isFuture ? "after" : "before"}) with ${ec.l10n.format(nearItem.quantity, "0.##")} of product ${nearItem.productId}', null))</script></iterate>
+                    <iterate list="nearItemList" entry="nearItem">
+                        <script>approveWarnings.add(ec.resource.expand('OrderApproveNearOrder', null))</script></iterate>
                 </iterate>
 
                 <!-- price min/max compare, for each product with min/max prices -->
