@@ -10,6 +10,11 @@ release. This release is based on Moqui Framework 2.1.1, mantle-udm 2.0.1.
 
 New Features
 
+- Various inline messages have been moved to LocalizedMessage records to
+  not break translations on message changes, and to make long message
+  localizable (with 255 char original limit); the following must be loaded
+  on update to get the needed records (is install data file, not seed):
+  - OrderInstallData.xml
 - The create#PostalAddress, #TelecomNumber, #EmailAddress, and
   #PartyContactOther services no longer have a default contactMechPurposeId
   and only create PartyContactMech so that they can be created without
